# VulkanTools

./: CMakeLists.txt  CMakePresets.json
.cache/clangd/index/: Buffer.cpp.9850FDF0EBE6AE3F.idx  Buffer.cpp.AADC2B6BF7EFFA60.idx  Buffer.hpp.19560023B69C4E3B.idx  Buffer.hpp.8C3E622671788781.idx  Camera.cpp.9B33E7F5C1936615.idx  Camera.cpp.D6F37A398A063C8F.idx  Camera.hpp.13902D237AA3B0FA.idx  Camera.hpp.7FE299EB88DCC4DD.idx  Debug.cpp.1BEA62877DABFEFD.idx  Debug.cpp.9235268F9356FADA.idx  Debug.hpp.A03C832333FEC94E.idx  Debug.hpp.ACAA0F60D03344D6.idx  Device.cpp.51C031C872684A5E.idx  Device.cpp.67AEE2FC5E09609B.idx  Device.hpp.2116635BA7925926.idx  Device.hpp.3A42D8644B63CEC8.idx  EdgeInstance.hpp.60281E5268074822.idx  GLTF_Assets.cpp.0C31C177E3935E52.idx  GLTF_Assets.cpp.CA85629B67B34FE6.idx  GLTF_Assets.hpp.AE9BA0E486B8AAE2.idx  GLTF_Assets.hpp.C4C93741898A1FA0.idx  GLTF_BasicInstance.cpp.AB768E2F2B11A0D5.idx  GLTF_BasicInstance.hpp.4A3F53D77D8940D2.idx  Initializers.hpp.6B0D872CA99E626F.idx  Initializers.hpp.894708894D45514F.idx  Instance.cpp.733D5184700238A1.idx  Instance.cpp.AAA31725DEAFF2E5.idx  Instance.hpp.20DB84DE3E5AE694.idx  Instance.hpp.4437587F3C6A393A.idx  InstancePipeline.cpp.3269F81BE19B066B.idx  InstancePipeline.hpp.FA88283958DED1B7.idx  NodeInstance.hpp.B93034ADA9AC27B9.idx  NodeInstance.hpp.FA96198A0001CAF2.idx  PipelineInitializers.cpp.ABAC81E62784E730.idx  PipelineInitializers.cpp.EDDB391B834101D1.idx  PipelineInitializers.hpp.4B2142A3A7F827FF.idx  PipelineInitializers.hpp.D6607150AF60E5F7.idx  ProjectionBuffer.cpp.4E5EBBB0F0C496BA.idx  ProjectionBuffer.hpp.131C7802A19FB971.idx  Renderpass.cpp.6653802E66A1D8FC.idx  (+44 more)
InstanceGraphics/: CMakeLists.txt  GLTF_Assets.cpp  GLTF_Assets.hpp  GLTF_BasicInstance.hpp
Interactive/: CMakeLists.txt  VulkanProjectionBuffer.cpp  VulkanProjectionBuffer.hpp
Routines/: CMakeLists.txt  VulkanSetup.cpp  VulkanSetup.hpp  VulkanWindow.cpp  VulkanWindow.hpp
Structures/: CMakeLists.txt  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp
Utilities/: CMakeLists.txt  VulkanDebug.cpp  VulkanDebug.hpp  VulkanTools.cpp  VulkanUtils.cpp
VulkanTools/InstanceGraphics/: CMakeLists.txt  GLTF_Assets.cpp  GLTF_Assets.hpp  GLTF_BasicInstance.hpp
VulkanTools/Interactive/: VulkanProjectionBuffer.cpp  VulkanProjectionBuffer.hpp
VulkanTools/Routines/: VulkanSetup.cpp  VulkanSetup.hpp  VulkanWindow.hpp
VulkanTools/Structures/: VulkanDevice.cpp  VulkanDevice.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanSwapChain.cpp
VulkanTools/Utilities/: CMakeLists.txt  VulkanPipelineInitializers.cpp  VulkanPipelineInitializers.hpp  VulkanUtils.hpp
VulkanTools/gltf/: VulkanTexture.cpp  VulkanglTFModel.cpp  VulkanglTFModel.hpp
cmake/: ccache.cmake  external_packages.cmake
gltf/: CMakeLists.txt  VulkanTexture.cpp  VulkanTexture.hpp  VulkanglTFModel.cpp  VulkanglTFModel.hpp
include/VulkanTools/: Buffer.hpp  Camera.hpp  Debug.hpp  Device.hpp  FrameBuffer.hpp  GLTF_Assets.hpp  GLTF_BasicInstance.hpp  Initializers.hpp  Instance.hpp  NodeInstance.hpp  PipelineInitializers.hpp  ProjectionBuffer.hpp  Renderpass.hpp  Setup.hpp  Submit.hpp  SwapChain.hpp  Tools.hpp  UBO.hpp  Utils.hpp  VulkanTools.hpp  Window.hpp  WindowUpdater.hpp  glsl_types.hpp
include/VulkanTools/InstanceRendering/: InstancePipeline.hpp
include/VulkanTools/gltf/: Texture.hpp  glTFModel.hpp
source/: Buffer.cpp  Camera.cpp  Debug.cpp  Device.cpp  GLTF_Assets.cpp  GLTF_BasicInstance.cpp  Instance.cpp  InstancePipeline.cpp  PipelineInitializers.cpp  ProjectionBuffer.cpp  Renderpass.cpp  Setup.cpp  Submit.cpp  SwapChain.cpp  Texture.cpp  Tools.cpp  UBO.cpp  Utils.cpp  VulkanTexture.cpp  VulkanglTFModel.cpp  Window.cpp
source/InstanceRendering/: InstancePipeline.cpp
