file(GLOB INSTANCE_GRAPHICS_SRC "*.cpp")
file(GLOB INSTANCE_GRAPHICS_HEADERS "*.hpp")
add_library(InstanceGraphics STATIC ${INSTANCE_GRAPHICS_SRC} ${INSTANCE_GRAPHICS_HEADERS})
# target_include_directories(InstanceGraphics PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(InstanceGraphics PRIVATE GLTF Structures Initializers Utilities)
